--- a/todo-list/src/index.css
+++ b/todo-list/src/index.css
@@ -29,6 +29,8 @@ body {
   display: block;
   margin: 0 auto;
   width: 400px;
+  height: 20px;
+  background: white;
   margin-bottom: 15px;
   padding: 5px;
   border: none;
