--- a/todo-list/src/App.css
+++ b/todo-list/src/App.css
@@ -1,122 +1,89 @@
-.taskList {
-	padding: 0 10px;
+* {
+	margin: 0;
+	padding: 0
 }
-
-.task {
-	list-style-type: none;
-	font-family: Tahoma;
-	font-size: 1.2em;
-	padding: 10px 0;
-	border-bottom: 1px solid #ccc;
-}
-
-
-.taskCheckbox {
-	position: relative;
-	float: left;
-	margin-right: 10px;
-	appearance: none;
-	width: 20px;
-	height: 20px;
-	border: 1px solid #ccc;
-	border-radius: 5px;
-	outline: none;
-	margin-left: 5px;
-	text-align: center;
-	cursor: pointer;
-	font-weight: bold;
-}
-
-.taskCheckbox:checked:after  {
-	color: green;
-	content: "\2713";
-	display: block;
-	font-size: 17px;
-	height: 17px;
-	position: absolute;
-	width: 17px;
-	left: 0.5px;
-	bottom: 2px;
-}
-
-.taskCheckbox:checked + .taskLabel {
-	text-decoration: line-through;
-	color: #656565;
-}
-
-.addTaskInput[placeholder] {
-	font-size: 1.1em;
-}
-
-.container {
-	width: 40%;
-	height: 400px;
-	position: relative;
+.content {
+	width: 60%;
+	height:100vh;
+	display: grid;
 	margin: 0 auto;
-	border-radius: 5px;
+	background: #E5E5E5;
+	font-size: 18px;
 }
 
-.header {
-	color: black;
-	padding: 5px;
-	text-align: center;
-	font-family: Tahoma, sans-serif;
+.App {
+	margin: 90px auto;
+	width: 70%;
+}
+.liTask {
+	list-style-type: none
+}
+.taskCheckbox {
+	display: none;
+}
+.taskContainer {
+	display: grid;
+	position: relative;
 }
 
-.inputContainer {
-	padding: 15px;
+.description {
+	background: white;
+	padding: 2px;
+	margin-bottom: 5px
 }
 
- .addTaskInput {
-	margin-top: 15px;
-	padding: 10px;
-	width: 100%;
-	border-radius: 25px;
-	box-sizing: border-box;
-	outline: none;
+.description::before {
+	content: '';
+	width: 20px;
+	height: 20px;	
+	background: white;
+	display: inline-block;
+	margin-right: 10px;
+	margin-left: -30px;
+	margin-bottom: 5px;
+	border-radius: 50%;
+	border: 1px solid #009688;
+	vertical-align: middle;
+	transition: .2s;
 }
 
-.listWrapper {
-	position: absolute;
-	bottom: 50px;
-	top: 160px;
-	right: 0;
-	left: 0;
+.taskCheckbox:checked + .description::before {
+	background: #009688;
 }
-
-.taskLabel span {
-	margin: 0px;
-	width: 400px;
+.description:hover {
+	cursor: pointer;
 }
-
-.deleteButton img {
-	width: 18px;
+.taskCheckbox:checked + .description {
+	text-decoration: line-through;
+	text-decoration-color: #009688;
 }
 
 .deleteButton {
-	float: right;;
-	visibility: hidden;
-	line-height: 0;
-	margin-right: 5px;
+	color:#009688;
+	position: absolute;
+	right: -30px;	
 }
 
-li.task:hover .deleteButton {
-	visibility: visible;
+.deleteButton:hover {
 	cursor: pointer;
 }
 
-.editIcon {
-	float: right;
-	visibility: hidden;
-	line-height: 0;
-	margin-right: 15px;
+.sticky i{
+	font-size: 70px;
+	color: #009688;
 }
 
-.editIcon img {
-	width: 18px;
+
+.sticky {
+	position: sticky;
+	bottom: 0;
+	margin-left: 740px;
+	margin-top: 200px;
 }
 
-li.task:hover .editIcon {
-	visibility: visible;
+.sticky i:hover{
+	font-size: 72px;
+	color: #107c71;
 	cursor: pointer;
+	transition: .3s;
 }
